@@ -189,6 +189,8 @@ reference.
     my @bar = (1,2,3);
     Stuff->add_one(\@bar);  # @bar is now (2,3,4)
 
+This feature requires L<Data::Alias> to be installed.
+
 
 
 =head3 Invocant parameter
@@ -427,7 +429,8 @@ Most parameters have a default traits of C<is rw is copy>.
 
 =item B<ro>
 
-Read-only.  Assigning or modifying the parameter is an error.
+Read-only.  Assigning or modifying the parameter is an error.  This trait
+requires L<Const::Fast> to be installed.
 
 =item B<rw>
 
@@ -444,7 +447,8 @@ This is a default trait except for the C<\@foo> parameter (see L<Aliased referen
 =item B<alias>
 
 The parameter will be an alias of the argument.  Any changes to the
-parameter will be reflected in the caller.
+parameter will be reflected in the caller.  This trait requires
+L<Data::Alias> to be installed.
 
 This is a default trait for the C<\@foo> parameter (see L<Aliased references>).
 
